crates/test-files/fixtures/compile_errors/return_from_init.fe
contract C {
    pub fn __init__() -> i32 {
        return 0
    }
}
